--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,1 +1,13 @@
-<p>Template</p>
+<div class="container-fluid">
+  <div class="row">
+
+    <div class="col-4">
+      <app-sidebar></app-sidebar>
+    </div>
+
+    <div class="col-8">
+      <app-chat></app-chat>
+    </div>
+
+  </div>
+</div>
