Moved padding from css into html

--- a/web/src/app/sidebar/title-bar/title-bar.component.html
+++ b/web/src/app/sidebar/title-bar/title-bar.component.html
@@ -1,4 +1,4 @@
-<div class="title-bar d-flex flex-row justify-content-start align-items-center">
+<div class="title-bar d-flex flex-row justify-content-start align-items-center p-2">
 
   <div>
     <img [src]="profileImage" alt="Profile Image" class="profile-image">
