Added hover styling to ChatItem

--- a/web/src/app/sidebar/chat-list/chat-item/chat-item.component.scss
+++ b/web/src/app/sidebar/chat-list/chat-item/chat-item.component.scss
@@ -1,3 +1,11 @@
+.chat-item {
+  cursor: pointer;
+}
+
+.chat-item:hover {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
 .profile-image {
   border-radius: 50%;
   width: 48px;
