--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid vh-100">
-  <div class="row">
+  <div class="row vh-100">
 
-    <div class="col-4">
-      <app-sidebar></app-sidebar>
+    <div class="col-4 mh-100">
+      <app-sidebar class="mh-100 d-flex flex-column justify-content-start"></app-sidebar>
     </div>
 
     <div class="col-8">
