--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="row vh-100">
 
     <div class="col-4 mh-100">
-      <app-sidebar class="mh-100 d-flex flex-column justify-content-start"></app-sidebar>
+      <app-sidebar class="mh-100"></app-sidebar>
     </div>
 
     <div class="col-8">
