--- a/web/src/app/sidebar/sidebar.component.html
+++ b/web/src/app/sidebar/sidebar.component.html
@@ -1,2 +1,4 @@
-<app-title-bar></app-title-bar>
-<app-chat-list class="overflow-auto"></app-chat-list>
+<div class="mh-100 d-flex flex-column justify-content-start">
+  <app-title-bar></app-title-bar>
+  <app-chat-list class="overflow-auto"></app-chat-list>
+</div>
