--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,12 +1,12 @@
-<div class="container-fluid vh-100">
-  <div class="row vh-100">
+<div class="container-fluid vh-100 px-0">
+  <div class="row g-0 vh-100">
 
     <div class="col-4 mh-100">
       <app-sidebar class="mh-100"></app-sidebar>
     </div>
 
     <div class="col-8">
-      <app-chat></app-chat>
+      <app-chat class="mh-100"></app-chat>
     </div>
 
   </div>
