--- a/web/src/app/chat/chat-title-bar/chat-title-bar.component.html
+++ b/web/src/app/chat/chat-title-bar/chat-title-bar.component.html
@@ -1,1 +1,11 @@
-<p>chat-title-bar works!</p>
+<div class="chat-title-bar d-flex flex-row justify-content-start align-items-center p-2">
+
+  <div>
+    <img [src]="profileImage" alt="Contact Profile Image" class="profile-image">
+  </div>
+
+  <div class="mx-2 flex-grow-1">
+    <span class="display-name my-0">{{displayName}}</span>
+  </div>
+
+</div>
