--- a/web/src/app/chat/chat.component.html
+++ b/web/src/app/chat/chat.component.html
@@ -1,1 +1,5 @@
-<p>chat works!</p>
+<div class="mh-100 d-flex flex-column justify-content-start">
+  <app-chat-title-bar displayName="Michael Pfab"
+                      profileImage="https://static01.nyt.com/images/2021/09/14/science/07CAT-STRIPES/07CAT-STRIPES-mediumSquareAt3X-v2.jpg">
+  </app-chat-title-bar>
+</div>
