--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -5,7 +5,7 @@
       <app-sidebar class="mh-100"></app-sidebar>
     </div>
 
-    <div class="col-8">
+    <div class="col-8 mh-100">
       <app-chat class="mh-100"></app-chat>
     </div>
 
