Added styling to ChatInputBar

--- a/web/src/app/chat/chat-input-bar/chat-input-bar.component.html
+++ b/web/src/app/chat/chat-input-bar/chat-input-bar.component.html
@@ -1,1 +1,19 @@
-<p>chat-input-bar works!</p>
+<div class="d-flex flex-row justify-content-start align-items-center">
+
+  <div>
+    <button class="btn">
+      <img src="assets/add_circle_outline_black_24dp.svg" alt="Add Image">
+    </button>
+  </div>
+
+  <div class="flex-grow-1 mx-2">
+    <input type="text" class="w-100 form-control">
+  </div>
+
+  <div>
+    <button class="btn">
+      <img src="assets/send_black_24dp.svg" alt="Send Message">
+    </button>
+  </div>
+
+</div>
