--- a/web/src/app/chat/chat.component.html
+++ b/web/src/app/chat/chat.component.html
@@ -2,6 +2,6 @@
   <app-chat-title-bar displayName="Michael Pfab"
                       profileImage="https://static01.nyt.com/images/2021/09/14/science/07CAT-STRIPES/07CAT-STRIPES-mediumSquareAt3X-v2.jpg">
   </app-chat-title-bar>
-  <app-chat-body class="flex-grow-1"></app-chat-body>
+  <app-chat-body class="flex-grow-1 overflow-auto"></app-chat-body>
   <app-chat-input-bar class="m-2"></app-chat-input-bar>
 </div>
