--- a/web/src/app/sidebar/sidebar.component.html
+++ b/web/src/app/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
 <div class="mh-100 d-flex flex-column justify-content-start">
   <app-title-bar></app-title-bar>
-  <app-chat-list class="overflow-auto"></app-chat-list>
+  <app-chat-list class="flex-grow-1 overflow-auto"></app-chat-list>
 </div>
