Added styling to ChatBodyMessage component

--- a/web/src/app/chat/chat-body/chat-body.component.html
+++ b/web/src/app/chat/chat-body/chat-body.component.html
@@ -1,2 +1,1 @@
-<app-chat-body-message *ngFor="let message of messages" [message]="message">
-</app-chat-body-message>
+<app-chat-body-message *ngFor="let message of messages" [message]="message"></app-chat-body-message>
