Changed TitleBar icons to buttons

--- a/web/src/app/sidebar/title-bar/title-bar.component.html
+++ b/web/src/app/sidebar/title-bar/title-bar.component.html
@@ -9,8 +9,8 @@
   </div>
 
   <div>
-    <img src="assets/chat_black_24dp.svg" alt="New Chat" class="mx-3">
-    <img src="assets/more_vert_black_24dp.svg" alt="More Options" class="mx-3">
+    <button class="btn"><img src="assets/chat_black_24dp.svg" alt="New Chat"></button>
+    <button class="btn"><img src="assets/more_vert_black_24dp.svg" alt="More Options"></button>
   </div>
 
 </div>
