Added margins to ChatBodyMessage

--- a/web/src/app/chat/chat-body/chat-body-message/chat-body-message.component.scss
+++ b/web/src/app/chat/chat-body/chat-body-message/chat-body-message.component.scss
@@ -12,9 +12,11 @@
 .message-incoming {
   background-color: $color-dark-grey;
   color: white;
+  margin-left: 8px;
 }
 
 .message-outgoing {
   background-color: $color-orange;
   color: black;
+  margin-right: 8px;
 }
