--- a/web/src/app/chat/chat-body/chat-body.component.html
+++ b/web/src/app/chat/chat-body/chat-body.component.html
@@ -1,1 +1,8 @@
-<app-chat-body-message *ngFor="let message of messages" [message]="message"></app-chat-body-message>
+<ng-container *ngIf="isInChat else notInChat">
+  <app-chat-body-message *ngFor="let message of messageService.chatMessages" [message]="message"></app-chat-body-message>
+</ng-container>
+<ng-template #notInChat>
+  <div class="d-flex justify-content-center align-items-center h-100">
+    <img src="assets/atbash.svg" alt="Atbash">
+  </div>
+</ng-template>
