Hide Chat when none selected

--- a/web/src/app/chat/chat-input-bar/chat-input-bar.component.html
+++ b/web/src/app/chat/chat-input-bar/chat-input-bar.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-row justify-content-start align-items-center">
+<div class="d-flex flex-row justify-content-start align-items-center" [class.d-none]="!isInChat">
 
   <div>
     <button class="btn">
