--- a/web/src/app/chat/chat-title-bar/chat-title-bar.component.html
+++ b/web/src/app/chat/chat-title-bar/chat-title-bar.component.html
@@ -1,4 +1,4 @@
-<div class="chat-title-bar d-flex flex-row justify-content-start align-items-center p-2">
+<div class="chat-title-bar d-flex flex-row justify-content-start align-items-center p-2" [class.d-none]="!isInChat">
 
   <div>
     <img [src]="profileImage" alt="Contact Profile Image" class="profile-image">
