--- a/web/src/app/loading-page/loading-page.component.html
+++ b/web/src/app/loading-page/loading-page.component.html
@@ -1,1 +1,9 @@
-<p>loading-page works!</p>
+<div class="container-fluid vh-100 px-0">
+  <div class="row g-0 h-100">
+    <div class="col h-100">
+      <div class="d-flex flex-row justify-content-center align-items-center h-100">
+        <img src="assets/atbash.svg" alt="Atbash">
+      </div>
+    </div>
+  </div>
+</div>
