--- a/web/src/app/app-page/app-page.component.html
+++ b/web/src/app/app-page/app-page.component.html
@@ -1,1 +1,13 @@
-<p>app-page works!</p>
+<div class="container-fluid vh-100 px-0">
+  <div class="row g-0 vh-100">
+
+    <div class="col-4 mh-100">
+      <app-sidebar class="mh-100"></app-sidebar>
+    </div>
+
+    <div class="col-8 mh-100">
+      <app-chat class="mh-100"></app-chat>
+    </div>
+
+  </div>
+</div>
