--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,13 +1,6 @@
-<div class="container-fluid vh-100 px-0">
-  <div class="row g-0 vh-100">
-
-    <div class="col-4 mh-100">
-      <app-sidebar class="mh-100"></app-sidebar>
-    </div>
-
-    <div class="col-8 mh-100">
-      <app-chat class="mh-100"></app-chat>
-    </div>
-
-  </div>
-</div>
+<ng-container *ngIf="loaded else notLoaded">
+  <app-app-page></app-app-page>
+</ng-container>
+<ng-template #notLoaded>
+  <app-loading-page></app-loading-page>
+</ng-template>
