Added sending to signalling server

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="loaded else notLoaded">
+<ng-container *ngIf="loadingState == connected else notLoaded">
   <app-app-page></app-app-page>
 </ng-container>
 <ng-template #notLoaded>
