Added Chat creation logic and event

--- a/web/src/app/app-page/sidebar/contact-list/contact-item/contact-item.component.html
+++ b/web/src/app/app-page/sidebar/contact-list/contact-item/contact-item.component.html
@@ -1,4 +1,4 @@
-<div class="contact-item d-flex flex-row justify-contents-start align-items-center p-2 w-100">
+<div class="contact-item d-flex flex-row justify-contents-start align-items-center p-2 w-100" (click)="selectContact()">
 
   <div>
     <img [src]="profileImage" alt="Contact Profile Image" class="profile-image">
