Fixed assets relative paths

--- a/web/src/app/app-page/chat/chat-body/chat-body.component.html
+++ b/web/src/app/app-page/chat/chat-body/chat-body.component.html
@@ -3,6 +3,6 @@
 </ng-container>
 <ng-template #notInChat>
   <div class="d-flex justify-content-center align-items-center h-100">
-    <img src="../../../../assets/atbash.svg" alt="Atbash">
+    <img src="assets/atbash.svg" alt="Atbash">
   </div>
 </ng-template>
