--- a/web/src/app/app-page/chat/chat-input-bar/chat-input-bar.component.html
+++ b/web/src/app/app-page/chat/chat-input-bar/chat-input-bar.component.html
@@ -2,7 +2,7 @@
 
   <div>
     <button class="btn">
-      <img src="../../../../assets/add_circle_outline_black_24dp.svg" alt="Add Image">
+      <img src="assets/add_circle_outline_black_24dp.svg" alt="Add Image">
     </button>
   </div>
 
@@ -12,7 +12,7 @@
 
   <div>
     <button class="btn" (click)="sendMessage()">
-      <img src="../../../../assets/send_black_24dp.svg" alt="Send Message">
+      <img src="assets/send_black_24dp.svg" alt="Send Message">
     </button>
   </div>
 
