--- a/web/src/app/app-page/image-view/image-view.modal.html
+++ b/web/src/app/app-page/image-view/image-view.modal.html
@@ -1,1 +1,5 @@
-<p>image-view works!</p>
+<div class="modal-body">
+  <div class="d-flex flex-row justify-content-center">
+    <img [src]="image" alt="Image Preview" class="image-view">
+  </div>
+</div>
