Fixed most recent message showing base64 images

--- a/web/src/app/app-page/sidebar/chat-list/chat-item/chat-item.component.html
+++ b/web/src/app/app-page/sidebar/chat-list/chat-item/chat-item.component.html
@@ -12,7 +12,7 @@
         <span>{{mostRecentMessage?.timestamp | date:"HH:mm"}}</span>
       </div>
 
-      <span class="most-recent-message">{{mostRecentMessage?.contents}}</span>
+      <span class="most-recent-message">{{mostRecentMessageContents}}</span>
     </div>
   </div>
 
