--- a/web/src/app/app-page/chat/chat-body/chat-body-message/chat-body-message.component.scss
+++ b/web/src/app/app-page/chat/chat-body/chat-body-message/chat-body-message.component.scss
@@ -9,6 +9,14 @@
   margin-top: 8px;
 }
 
+.message-status {
+  display: flex;
+  max-width: 100ch;
+  justify-content: flex-end;
+  font-size: 10px;
+  margin-top: 2px;
+}
+
 .message-incoming {
   background-color: $color-dark-grey;
   color: white;
