--- a/web/src/app/app-page/chat/chat-body/chat-body-message/chat-body-message.component.html
+++ b/web/src/app/app-page/chat/chat-body/chat-body-message/chat-body-message.component.html
@@ -7,5 +7,8 @@
         {{messageContents}}
       </span>
     </ng-template>
+    <div class="text-end message-timestamp">
+      {{messageTimestamp | date:"HH:mm"}}
+    </div>
   </div>
 </div>
