Send message with 'enter'

--- a/web/src/app/app-page/chat/chat-input-bar/chat-input-bar.component.html
+++ b/web/src/app/app-page/chat/chat-input-bar/chat-input-bar.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="flex-grow-1 mx-2">
-    <input type="text" class="w-100 form-control" [(ngModel)]="inputBarContents">
+    <input type="text" class="w-100 form-control" [(ngModel)]="inputBarContents" (keydown.enter)="sendMessage()">
   </div>
 
   <div>
