Timestamp uses pipe

--- a/web/src/app/app-page/chat/chat-body/chat-body-message/chat-body-message.component.html
+++ b/web/src/app/app-page/chat/chat-body/chat-body-message/chat-body-message.component.html
@@ -10,7 +10,7 @@
     <br/>
     <div class="message-status">
       <span>
-      {{messageTime}}
+      {{messageTimestamp | date:"HH:mm"}}
       </span>
       <img *ngIf="!message?.isIncoming" [src]="readStatusSVG" alt="x" height="15" style="padding-left: 4px;">
     </div>
