--- a/web/src/app/app-page/chat/chat-body/chat-body-message/chat-body-message.component.html
+++ b/web/src/app/app-page/chat/chat-body/chat-body-message/chat-body-message.component.html
@@ -1,7 +1,8 @@
 <div class="w-100 mw-75" [class.text-end]="!message?.isIncoming">
   <div class="message-card" [class.message-incoming]="message?.isIncoming"
        [class.message-outgoing]="!message?.isIncoming">
-    <img *ngIf="isMediaMessage else notMedia" [src]="mediaContents" alt="Image media" height="400" class="message-media" (click)="enlargeImage()">
+    <img *ngIf="isMediaMessage else notMedia" [src]="mediaContents" alt="Image media" height="400" class="message-media"
+         (click)="enlargeImage()">
     <ng-template #notMedia>
       <span [class.fst-italic]="message?.deleted == true">
         {{messageContents}}
